# Embbedded-Control-Simulation

./: .gitattributes  .gitignore  README.md  embedded_interview_cheatsheet.md  embedded_study_journal.md
engine_management_system/: CMakeLists.txt
engine_management_system/src/framework/: manager.h  module_interface.h
engine_management_system/src/signals/: signals.h
engine_management_system/src/utility/: hysteresis.h  increment_timer.h  rate_limiter.h
gear_display_facade/: CMakeLists.txt  main_backup.cpp
gear_display_facade/src/assembly/: instantiation.h  instantiation_gear_display.h
gear_display_facade/src/framework/: manager.h
gear_display_facade/src/modules/: gear_display_facade.cc  gear_display_facade.h  gear_types.h
hydraulic_temp_warning_system/src/framework/: manager.h  module_interface.h
hydraulic_temp_warning_system/src/modules/: hydraulic_temp_warning_module.cc  hydraulic_temp_warning_module.h
hydraulic_temp_warning_system/src/signals/: signals.h
vehicle_monitoring_system/: CMakeLists.txt  main.cc
vehicle_monitoring_system/src/framework/: manager.h  module_interface.h
vehicle_monitoring_system/src/modules/: hydraulic_temp_warning_module.cc  hydraulic_temp_warning_module.h
vehicle_monitoring_system/src/signals/: signals.h
vehicle_monitoring_system/src/utility/: hysteresis.h  increment_timer.h
